[package]
name = "primwrap"
version = "1.1.1"
authors = ["NightEule5 <24661563+NightEule5@users.noreply.github.com>"]
description = "Derive operation traits for primitive wrapper structs."
keywords = ["derive", "proc_macro", "wrappers"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/NightEule5/primwrap/"

[lib]
proc-macro = true

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
# Temporary until #74 fix makes it into a release.
virtue = { git = "https://github.com/NightEule5/virtue/", rev = "9f06493" }
