[package]
name = "primwrap"
version = "1.1.1"
authors = ["NightEule5 <24661563+NightEule5@users.noreply.github.com>"]
description = "Derive operation traits for primitive wrapper structs."
keywords = ["derive", "proc_macro", "wrappers"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/NightEule5/primwrap/"

[lib]
proc-macro = true

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
virtue = "0.0.18"
